Actions
Bug #12650
closedds: smatch and NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointers:
../../sun4v/io/ds_common.c: In function 'ds_ldc_fini': ../../sun4v/io/ds_common.c:434: error: assignment makes integer from pointer without a cast ../../sun4v/io/ds_common.c: In function 'ds_ucap_init': ../../sun4v/io/ds_common.c:2554: error: assignment makes integer from pointer without a cast ../../sun4v/io/ds_common.c: In function 'ds_loopback_unregister': ../../sun4v/io/ds_common.c:3057: error: assignment makes integer from pointer without a cast ../../sun4v/io/ds_common.c: In function 'ds_svc_clone': ../../sun4v/io/ds_common.c:3209: error: assignment makes integer from pointer without a cast /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../sun4v/io/ds_drv.c:509 ds_log_init() error: buffer overflow 'ds_log_entry_pool' 43690 <= 43690 /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../sun4v/io/ds_drv.c:509 ds_log_init() error: buffer overflow 'ds_log_entry_pool' 43690 <= 43690
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit cb453c7ae4b42ac7a2d7ce155181572a96d69b33
commit cb453c7ae4b42ac7a2d7ce155181572a96d69b33 Author: Toomas Soome <tsoome@me.com> Date: 2020-05-11T18:01:00.000Z 12650 ds: smatch and NULL pointer errors Reviewed by: C Fraire <cfraire@me.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions